hphp/hack/test/typecheck/contravariance_bad1.php.like_types.exp
File "contravariance_bad1.php", line 39, characters 10-11:
Invalid return type (Typing[4110])
File "contravariance_bad1.php", line 30, characters 20-31:
Expected ~ISettable<B> because it is an unenforceable type
File "contravariance_bad1.php", line 33, characters 12-14:
But got Box<A>
